# devpm

./: .gitignore  CHANGELOG.md  README.md  devpackage.json  devpackage.schema.json  pyproject.toml
example/: devpackage.json  version.py
src/devpm/: __main__.py
src/devpm/_internal/cli/: base_command.py  main.py
src/devpm/_internal/commands/: __init__.py  base_run.py  cr.py  githook.py  install.py  lint.py  pr.py  restart.py  run.py  start.py  stop.py  test.py  version.py
src/devpm/_internal/utils/: __init__.py  bash.py  bin.py  code.py  context.py  git.py  log.py  pip.py
